# Air_Hockey

./: .gitignore  README.md
LinuxVersion/: CMakeLists.txt
LinuxVersion/src/: AIPlayer.cpp  AirHockey  Audio.h  BallLogic.cpp  BallLogic.h  BasicGameObject.h  InitSdl.cpp  InitSdl.h  PlayerLogic.cpp  PlayerLogic.h  ReadMe.txt  ScorePanel.cpp  ScorePanel.h  main.cpp  makefile
SDL_air_hockey/: SDL_air_hockey.VC.VC.opendb  SDL_air_hockey.sln
SDL_air_hockey/SDL_air_hockey/: AIPlayer.h  Audio.cpp  Audio.h  BallLogic.h  BasicGameObject.cpp  Constants.cpp  PlayerLogic.h  SDL_air_hockey.vcxproj  SDL_air_hockey.vcxproj.filters  ScorePanel.cpp  main.cpp  packages.config
